# awesome-cloud-computing

./: .lycheeignore  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  justfile  lychee.toml  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: broken_link.md  bug_improvement.md  request_resource.md
.github/workflows/: deploy-mkdocs.yml  links.yml  test.yml
docs/en/: index.md
docs/en/community/: index.md
docs/en/learning/: certifications.md
docs/en/security/: compliance-governance.md  iam.md  secret-management.md  threat-detection.md
docs/en/tools/: cloud-migration.md  containerization.md  finops-cost-management.md  infrastructure-as-code.md  multi-cloud-management.md  serverless-frameworks.md
docs/en/trends/: index.md
docs/id/: contributing.md  index.md  platforms.md
docs/id/best-practices/: cost-optimization.md  index.md  scalability-performance.md
docs/id/community/: index.md
docs/id/learning/: basic-concepts.md  books.md  certifications.md  index.md  tutorials.md
docs/id/security/: compliance-governance.md  iam.md  index.md  secret-management.md  threat-detection.md
docs/id/tools/: cloud-migration.md  containerization.md  disaster-recovery.md  edge-computing.md  finops-cost-management.md  index.md  infrastructure-as-code.md  logging.md  monitoring.md  multi-cloud-management.md  serverless-frameworks.md
docs/id/trends/: index.md
scripts/: sync_languages.py
