[project]
name = "awesome-cloud-computing"
version = "0.1.0"
description = " A curated list of concepts, cloud platforms, tools, practices and resources to learn and improve cloud computing knowledge."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocs-minify-plugin>=0.7.0",
    "mkdocs-static-i18n>=1.2.0",
    "pymdown-extensions>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.5.1",
    "rich>=13.0.0",
]
